--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -1,6 +1,3 @@
-body
-  background-color: blue
-
-h1
-  color: white
-  font-size: 280px
+@import "_base.sass"
+@import "_header.sass"
+@import "_addform"
