--- a/app/css/style.css
+++ b/app/css/style.css
@@ -78,3 +78,26 @@ header {
     border-left: 1px solid #e5e5e5;
     padding: 15px 15px 15px 15px;
     color: rgba(0, 0, 0, 0.87); }
+
+.container {
+  margin-top: 50px;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center; }
+  .container .tasks {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: center;
+        justify-content: center;
+    max-width: 1200px;
+    list-style-type: none; }
+    .container .tasks .task {
+      width: 200px;
+      height: 100px;
+      background: rgba(255, 255, 255, 0.9);
+      border-radius: 4px;
+      margin: 10px;
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
