--- a/app/sass/_addform.sass
+++ b/app/sass/_addform.sass
@@ -26,3 +26,12 @@
     border-left: 1px solid #e5e5e5
     padding: 15px 15px 15px 15px
     color: $black-text
+    transition: background-color 0.2s ease-in-out
+    border-radius: 0px 4px 4px 0px
+
+    &:hover
+      cursor: pointer
+      background-color: #ededed
+
+    &:focus
+      outline: none
