--- a/app/sass/_addform.sass
+++ b/app/sass/_addform.sass
@@ -16,6 +16,7 @@
     padding: 15px 30px
     flex-grow: 1
     color: $black-text
+    border-radius: 4px 0px 0px 4px
 
     &:focus
       outline: none
